* MaxToRun returns 0 when there is no BatchInfo
* added function debugrestart to init script
* added TRACE level to logging systems
* manually merged various changes to loglevels and sched plugins from ec2fixed adhoc branch.
* fixed minor bug with debugrestart when log file doesn't exist
* cleaned up sched plugin messages to be more consistent 

2.4.7 

* port number in case of submit plugin CondorOSGCE not hardcoded. But default is still 9619
* batchqueue was still mandatory in one plugin. Not anymore
* added panda status throttled to the mappings as notready
* some code in proxymanager.py cleaner, and made baseproxy not mandatory
* made the remote_* variables in proxymanager not mandatory, and removed from proxy.conf
* created bin/autopyfactory_version
* checking if methods _updateclouds( ) and _updatesites( ) in PANDA WMS Status plugin return something valid
* added MissingPluginException to apfexceptions.py
* split the code in method APFQueue.run( ) into 3 separated methods, so they could be called one by one from outside
* starting the APFQueue threads in a separate method _start( )
* using Queue() to serialize the condor_submit tasks
* using self.factory.qcl instead of self.qcl in cleanlogs, so it always keeps the latest configuration, even after reconfig
* Factory.__init__ refactorized, for clarity
* created directory sbin/ add added first draft version of autopyfactory-reconfigure
* using method Config.compare() to decide which queues to start and stop on every re-configuration
* created first draft code for a listener class
* created method Config.addsection() to add and entire section to a configloader object
* factory.py split into two files: factory.py and queues.py
* APFQueue objects are started all of them from method APFQueuesManager::start(), instead of being started when created
* added configplugin variable to autopyfactory.conf
* config/ plugins
* moved Singleton templates from factory.py to interfaces.py