@@ -14,6 +14,7 @@
 factoryAdminEmail = neo@matrix.net
 factoryId = MYSITE-hostname-sysadminname
 factorySMTPServer = mail.matrix.net
+factoryMinEmailRepeatSeconds = 43200
 factoryUser = autopyfactory
 enablequeues = True
 
